--- a/css/player.css
+++ b/css/player.css
@@ -294,7 +294,7 @@
 .player_ui-accordion .player_ui-accordion-content { padding: 1em 2.2em; border-top: 0; margin-top: -2px; position: relative; top: 1px; margin-bottom: 2px; overflow: auto; display: none; zoom: 1; }
 .player_ui-accordion .player_ui-accordion-content-active { display: block; }/* Autocomplete
 ----------------------------------*/
-.player_ui-autocomplete-menu { position: absolute; cursor: default; }	
+.player_ui-autocomplete-menu { position: absolute; cursor: default; }
 
 .player_ui-autocomplete-loading { background: white url('jquery-ui/css/dark-hive/images/ui-anim.basic.16x16.gif') right center no-repeat; }
 .player_ui-autocomplete-over { background-color: #0A246A; color: white; }
@@ -331,8 +331,8 @@
 .player_ui-button { display: inline-block; position: relative; padding: 0; margin-right: .1em; text-decoration: none !important; cursor: pointer; text-align: center; zoom: 1; overflow: visible; } /* the overflow property removes extra width in IE */
 .player_ui-button-icon-only { width: 2.2em; } /* to make room for the icon, a width needs to be set here */
 button.player_ui-button-icon-only { width: 2.4em; } /* button elements seem to need a little more width */
-.player_ui-button-icons-only { width: 3em; } 
-button.player_ui-button-icons-only { width: 3.2em; } 
+.player_ui-button-icons-only { width: 3em; }
+button.player_ui-button-icons-only { width: 3.2em; }
 
 /*button text element */
 .player_ui-button .player_ui-button-text { display: block; line-height: 1.4;  }
@@ -374,7 +374,7 @@ button.player_ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset ex
 .player_ui-datepicker .player_ui-datepicker-title { margin: 0 2.3em; line-height: 1.8em; text-align: center; }
 .player_ui-datepicker .player_ui-datepicker-title select { font-size:1em; margin:1px 0; }
 .player_ui-datepicker select.player_ui-datepicker-month-year {width: 100%;}
-.player_ui-datepicker select.player_ui-datepicker-month, 
+.player_ui-datepicker select.player_ui-datepicker-month,
 .player_ui-datepicker select.player_ui-datepicker-year { width: 49%;}
 .player_ui-datepicker table {width: 100%; font-size: .9em; border-collapse: collapse; margin:0 0 .4em; }
 .player_ui-datepicker th { padding: .7em .3em; text-align: center; font-weight: bold; border: 0;  }
@@ -424,7 +424,7 @@ button.player_ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset ex
 ----------------------------------*/
 .player_ui-dialog { position: absolute; padding: .2em; width: 300px; overflow: hidden; }
 .player_ui-dialog .player_ui-dialog-titlebar { padding: .5em 1em .3em; position: relative;  }
-.player_ui-dialog .player_ui-dialog-title { float: left; margin: .1em 16px .2em 0; } 
+.player_ui-dialog .player_ui-dialog-title { float: left; margin: .1em 16px .2em 0; }
 .player_ui-dialog .player_ui-dialog-titlebar-close { position: absolute; right: .3em; top: 50%; width: 19px; margin: -10px 0 0 0; padding: 1px; height: 18px; }
 .player_ui-dialog .player_ui-dialog-titlebar-close span { display: block; margin: 1px; }
 .player_ui-dialog .player_ui-dialog-titlebar-close:hover, .player_ui-dialog .player_ui-dialog-titlebar-close:focus { padding: 0; }
@@ -1050,11 +1050,6 @@ button.player_ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset ex
   bottom:5px;
 }
 
-#debut{
-	float: left ;
-	 border: solid 2px #990000 ;
-	  background-color: #FFFF00 ; 
-	  width: 250px ; 
-	  padding: 10px ; 
-	  color: black 
+form#subtitle table thead tr td, form#subtitle table thead tr th {
+    width: 161px;
 }
